[uk] make it compile with Java8